<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context="stts.edu.tourbook.post_tour">
  <ImageView
    android:id="@+id/imageView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginTop="16dp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:srcCompat="@mipmap/ic_launcher" android:contentDescription="@string/todo" />

  <TextView
    android:id="@+id/textView7"
    android:layout_width="115dp"
    android:layout_height="25dp"
    android:layout_marginStart="20dp"
    android:layout_marginTop="16dp"
    android:text="@string/travel_world"
    app:layout_constraintStart_toEndOf="@+id/imageView"
    app:layout_constraintTop_toTopOf="parent" />

  <TextView
    android:id="@+id/textView8"
    android:layout_width="77dp"
    android:layout_height="30dp"
    android:layout_marginStart="20dp"
    android:layout_marginTop="8dp"
    android:text="@string/_1_hour_ago"
    app:layout_constraintStart_toEndOf="@+id/imageView"
    app:layout_constraintTop_toBottomOf="@+id/textView7" />

  <TextView
    android:id="@+id/textView9"
    android:layout_width="93dp"
    android:layout_height="24dp"
    android:layout_marginStart="28dp"
    android:layout_marginTop="8dp"
    android:text="@string/tour_ke_bali"
    app:layout_constraintStart_toEndOf="@+id/textView8"
    app:layout_constraintTop_toBottomOf="@+id/textView7" />

  <TextView
    android:id="@+id/textView10"
    android:layout_width="354dp"
    android:layout_height="85dp"
    android:layout_marginEnd="8dp"
    android:layout_marginTop="8dp"
    android:text="@string/pesan_notification"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="@+id/imageView"
    app:layout_constraintTop_toBottomOf="@+id/imageView" />

  <ImageButton
    android:id="@+id/imageButton"
    android:layout_width="60dp"
    android:layout_height="52dp"
    android:layout_marginStart="88dp"
    android:layout_marginTop="40dp"
    app:layout_constraintStart_toStartOf="@+id/textView10"
    app:layout_constraintTop_toBottomOf="@+id/textView10"
    app:srcCompat="@android:drawable/presence_online" android:contentDescription="@string/todo" />

  <ImageButton
    android:id="@+id/imageButton2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="68dp"
    android:layout_marginTop="40dp"
    app:layout_constraintStart_toEndOf="@+id/imageButton"
    app:layout_constraintTop_toBottomOf="@+id/textView10"
    app:srcCompat="@android:drawable/ic_menu_compass" android:contentDescription="@string/todo" />

</android.support.constraint.ConstraintLayout>
