<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context="stts.edu.tourbook.perencanaan">

  <TextView
    android:id="@+id/textView2"
    android:layout_width="116dp"
    android:layout_height="32dp"
    android:layout_marginStart="16dp"
    android:layout_marginTop="16dp"
    android:text="@string/pilih_tanggal"
    android:textColor="@android:color/background_dark"
    android:textSize="18sp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <TextView
    android:id="@+id/textView3"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="32dp"
    android:layout_marginTop="20dp"
    android:text="@string/pilih_jam"
    android:textColor="@android:color/background_dark"
    android:textSize="18sp"
    app:layout_constraintStart_toStartOf="@+id/textView2"
    app:layout_constraintTop_toBottomOf="@+id/textView2" />

  <TextView
    android:id="@+id/textView5"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:text="@string/destinasi"
    android:textColor="@android:color/background_dark"
    android:textSize="18sp"
    app:layout_constraintStart_toStartOf="@+id/textView3"
    app:layout_constraintTop_toBottomOf="@+id/textView3" />

  <TextView
    android:id="@+id/link_rekomen"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginEnd="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="12dp"
    android:text="@string/recommend"
    android:textColor="@android:color/holo_blue_dark"
    android:textSize="18sp"
    android:textStyle="bold"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textView5" />

  <TextView
    android:id="@+id/textView6"
    android:layout_width="7dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="20dp"
    android:layout_marginTop="20dp"
    android:text="@string/titik"
    android:textColor="@android:color/background_dark"
    android:textSize="24sp"
    app:layout_constraintStart_toEndOf="@+id/numberPicker3"
    app:layout_constraintTop_toBottomOf="@+id/textView2" />

  <Button
    android:id="@+id/button2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginEnd="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="24dp"
    android:text="@string/add"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/link_rekomen" />

  <NumberPicker
    android:id="@+id/numberPicker3"
    android:layout_width="wrap_content"
    android:layout_height="26dp"
    android:layout_marginStart="28dp"
    android:layout_marginTop="20dp"
    app:layout_constraintStart_toEndOf="@+id/textView3"
    app:layout_constraintTop_toBottomOf="@+id/textView2" />

  <NumberPicker
    android:id="@+id/numberPicker4"
    android:layout_width="wrap_content"
    android:layout_height="30dp"
    android:layout_marginStart="24dp"
    android:layout_marginTop="20dp"
    app:layout_constraintStart_toEndOf="@+id/textView6"
    app:layout_constraintTop_toBottomOf="@+id/textView2" />

  <ListView
    android:id="@+id/lv_rencana"
    android:layout_width="368dp"
    android:layout_height="308dp"
    android:layout_marginEnd="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="4dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/button2" />

  <EditText
    android:id="@+id/editText4"
    android:layout_width="wrap_content"
    android:layout_height="32dp"
    android:layout_marginEnd="8dp"
    android:layout_marginStart="20dp"
    android:layout_marginTop="16dp"
    android:ems="10"
    android:inputType="date"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.666"
    app:layout_constraintStart_toEndOf="@+id/textView2"
    app:layout_constraintTop_toTopOf="parent" />

  <Spinner
    android:id="@+id/spinner"
    android:layout_width="221dp"
    android:layout_height="24dp"
    android:layout_marginEnd="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="12dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="1.0"
    app:layout_constraintStart_toEndOf="@+id/textView5"
    app:layout_constraintTop_toBottomOf="@+id/numberPicker4" />
</android.support.constraint.ConstraintLayout>
